--- a/movies-service/src/main/resources/application.yml
+++ b/movies-service/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 spring:
   profiles:
     active: local
+
+
+
 server:
   port: 8082
+
+
+restClient:
+  moviesInfoURL: http://localhost:8080/v1/movieinfos
+  moviesReviewURL: http://localhost:8081/v1/reviews
